extra required fix + remove unnecessary variable behind %

--- a/ui/src/components/dialog/QDialog.styl
+++ b/ui/src/components/dialog/QDialog.styl
@@ -90,7 +90,7 @@ body.q-ios-padding .q-dialog__inner
     padding-bottom: "calc(env(safe-area-inset-bottom) + %s) !important" % $dialog-minimized-padding
   > div
     // quotes are stylus workaround to not error when parsing env()
-    max-height: "calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom)) !important" % $ios-statusbar-height
+    max-height: "calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom) - (%s * 2)) !important" % $dialog-minimized-padding
 
 @media (max-width: $breakpoint-xs-max)
   .q-dialog__inner
